# monorepo

./: Cargo.toml  run.sh  run1.sh  run2.sh
.github/workflows/: checker.yml  rust.yml
event-manager/: Cargo.toml
event-manager/docs/: DEVELOPMENT.md
event-manager/src/: lib.rs
event-manager/src/utilities/: mod.rs
kvm-bindings/: Cargo.toml
kvm-ioctls/: Cargo.toml
kvm-ioctls/src/ioctls/: vcpu.rs
vfio-bindings/: Cargo.toml  README.md
vfio-bindings/src/: fam_wrappers.rs
vfio-user/: Cargo.toml
virtio-bindings/: Cargo.toml
virtio-blk/: Cargo.toml
virtio-blk/src/: defs.rs  lib.rs  request.rs  stdio_executor.rs
virtio-console/: Cargo.toml
virtio-console/src/: console.rs  lib.rs
virtio-device/: Cargo.toml
virtio-device/src/: lib.rs  mmio.rs  virtio_config.rs
virtio-queue/: Cargo.toml
virtio-queue-ser/: Cargo.toml
virtio-queue-ser/src/: lib.rs  state.rs
virtio-queue/benches/: main.rs
virtio-queue/benches/queue/: mod.rs
virtio-queue/src/: defs.rs  descriptor.rs  lib.rs  mock.rs
virtio-vsock/: Cargo.toml
virtio-vsock/src/: lib.rs  packet.rs
vm-allocator/: Cargo.toml
vm-device/: Cargo.toml
vm-device/src/bus/: address.rs  range.rs
vm-fdt/: Cargo.toml  README.md
vm-fdt/src/: writer.rs
vm-memory/: Cargo.toml
vm-superio/: Cargo.toml
vm-superio-ser/: Cargo.toml
vmm-sys-util/: Cargo.toml
