[package]
name = "virtio-queue"
version = "0.11.0"
authors = ["The Chromium OS Authors"]
description = "virtio queue implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.17"
virtio-bindings = { path = "../virtio-bindings", version = "0.2.2" }
vm-memory =  { path = "../vm-memory", version = "0.14.0" }
vmm-sys-util = { path = "../vmm-sys-util", version = "0.12.1" }

[dev-dependencies]
criterion = "0.5.1"
memoffset = "0.9.0"
vm-memory = { path = "../vm-memory", version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }

[[bench]]
name = "main"
harness = false
