[package]
name = "vm-fdt"
version = "0.3.0"
description = "Crate for writing Flattened Devicetree blobs"
authors = ["The Chromium OS Authors"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/rust-vmm/vm-fdt"
keywords = ["fdt"]

[dependencies]
hashbrown = "0.14"

[features]
default = ["std"]
std = []
alloc = []
