[package]
name = "vm-memory"
version = "0.14.0"
description = "Safe abstractions for accessing the VM physical memory"
keywords = ["memory"]
categories = ["memory-management"]
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vm-memory"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
autobenches = false

[features]
default = []
backend-bitmap = []
backend-mmap = []
backend-atomic = ["arc-swap"]
xen = ["backend-mmap", "bitflags", "vmm-sys-util"]

[dependencies]
arc-swap = { version = "1.0.0", optional = true }
bitflags = { version = "2.4.0", optional = true }
libc = "0.2.39"
thiserror = "1.0.40"
vmm-sys-util = { path = "../vmm-sys-util", version = "0.12.1", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "sysinfoapi"]

[dev-dependencies]
criterion = "0.3.0"
matches = "0.1.0"
vmm-sys-util = { path = "../vmm-sys-util", version = "0.12.1" }

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
all-features = true
