[package]
name = "vm-superio"
version = "0.7.0"
description = "Emulation for legacy devices"
keywords = ["superio", "emulation"]
repository = "https://github.com/rust-vmm/vm-superio"
readme = "README.md"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
libc = "0.2.39"
vmm-sys-util = { path = "../vmm-sys-util", version = "0.12.1" }
